--- a/index.css
+++ b/index.css
@@ -36,7 +36,11 @@ section h1 {
 .alignCenter{
     align-items: center;
 }
-
+.text {
+    font-family: "Playfair Display", serif;
+    font-size: 110%;
+    
+}
 .myButton {
 	box-shadow: 0px 1px 0px 0px #1c1b18;
 	background-color:transparent;
@@ -86,4 +90,9 @@ section h1 {
 }
 .justifycontent {
     justify-content: center;
+}
+.footerImg {
+    width: 600px;
+    height: 300px;
+    object-fit: cover;
 }
